# contracts-minimal-example

./: Cargo.toml  lib.rs
artifacts/: .rustc_info.json  call_runtime.contract  call_runtime.json  call_runtime.wasm
